--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ p{
 .about img{
   width:260px;
   height:340px;
-  margin-top:20px;          /* ⬅ foto un poco más arriba */
+  margin-top:12px;          /* ⬅ un poquitín más arriba */
   object-fit:cover;
   filter:grayscale(100%) contrast(1.05);
   opacity:.9;
