--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@ p{
 /* ========= ABOUT ========= */
 .about{
   display:flex;
-  gap:52px;                 /* ⬅ más separación texto–imagen */
+  gap:40px;
   margin-top:12px;
   align-items:flex-start;
 }
 
 .about img{
-  width:275px;              /* ⬅ ligeramente más grande */
-  height:360px;
-  margin-top:12px;          /* ⬅ imagen un poco más arriba */
+  width:260px;
+  height:340px;
+  margin-top:16px;        /* ⬅ ajuste fino */
   object-fit:cover;
   filter:grayscale(100%) contrast(1.05);
   opacity:.9;
@@ -146,7 +146,6 @@ p{
   color:inherit;
 }
 
-/* principal */
 .project.main{
   margin-top:48px;
 }
@@ -164,7 +163,6 @@ p{
   font-weight:500;
 }
 
-/* secundarios */
 .project.secondary{
   margin-top:32px;
 }
@@ -182,7 +180,6 @@ p{
   font-weight:500;
 }
 
-/* exploraciones */
 .project.minor{
   margin-top:24px;
 }
