--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ p{
 .about img{
   width:260px;
   height:340px;
-  margin-top:16px;        /* ⬅ ajuste fino */
+  margin-top:16px;
   object-fit:cover;
   filter:grayscale(100%) contrast(1.05);
   opacity:.9;
@@ -272,7 +272,15 @@ p{
     <h1>Sobre mí</h1>
     <div class="about">
       <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia, con un perfil ecléctico, flexible y adaptable a distintos contextos de trabajo. No me sitúo en un extremo puramente artístico ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar ambas dimensiones del diseño. Formación en la Universidad Politécnica de Valencia, con experiencia internacional en Middlesex University (Londres) y base técnica en electricidad. Interesado en sistemas, procesos y soluciones estructuralmente coherentes.
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
+        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
+        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
+        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
+        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia,
+        tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
+        Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
+        electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
+        del proceso de diseño desde lo conceptual hasta la producción final, con soluciones consistentes.
       </p>
       <img src="foto.jpg" alt="Foto personal">
     </div>
@@ -323,7 +331,9 @@ p{
   <div class="section-block">
     <h1>CV</h1>
     <p>
-      Ingeniería en Diseño Industrial · UPV. Formación previa en electricidad. Experiencia en mobiliario a medida, desarrollo de producto, conceptualización, modelado 3D y prototipado. Interés en sistemas constructivos, diseño racional y procesos industriales.
+      Ingeniería en Diseño Industrial · UPV. Formación previa en electricidad. Experiencia en mobiliario
+      a medida, desarrollo de producto, conceptualización, modelado 3D y prototipado. Interés en sistemas
+      constructivos, diseño racional y procesos industriales.
     </p>
   </div>
 </section>
@@ -334,7 +344,10 @@ p{
     <h1>Contacto</h1>
     <div class="contact-statement">
       <p>
-        Busco entornos donde el diseño se entienda como un proceso completo: análisis, estructura, decisión y materialización. Me interesan proyectos donde la claridad conceptual y la lógica constructiva tengan tanto peso como la forma final. Disponible para oportunidades profesionales, colaboraciones o conversaciones honestas sobre diseño y proceso.
+        Busco entornos donde el diseño se entienda como un proceso completo: análisis, estructura,
+        decisión y materialización. Me interesan proyectos donde la claridad conceptual y la lógica
+        constructiva tengan tanto peso como la forma final. Disponible para oportunidades profesionales,
+        colaboraciones o conversaciones honestas sobre diseño y proceso.
       </p>
     </div>
   </div>
