--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ p{
 /* ========= ABOUT ========= */
 .about{
   display:flex;
-  gap:40px;
+  gap:56px;              /* ⬅ separación aumentada */
   margin-top:12px;
   align-items:flex-start;
 }
