--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@ p{
 /* ========= ABOUT ========= */
 .about{
   display:flex;
-  gap:56px;              /* ⬅ separación aumentada */
+  gap:56px;
   margin-top:12px;
   align-items:flex-start;
 }
 
 .about img{
-  width:260px;
-  height:340px;
+  width:280px;              /* ⬅ imagen más grande */
+  height:360px;
   margin-top:16px;
   object-fit:cover;
   filter:grayscale(100%) contrast(1.05);
@@ -280,7 +280,7 @@ p{
         tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
         Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
         electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
-        del proceso de diseño desde lo conceptual hasta la producción final, con soluciones consistentes.
+        del proceso de diseño desde lo conceptual hasta la materialización.
       </p>
       <img src="foto.jpg" alt="Foto personal">
     </div>
