--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@ nav span{
 
 .section.hero h1{
   font-size:clamp(80px,7vw,140px);
+  text-align:center;        /* ⬅ centrado */
+  white-space:nowrap;       /* ⬅ una sola línea */
 }
 
 .hero-sub{
@@ -127,7 +129,7 @@ p{
 }
 
 .about img{
-  width:280px;              /* ⬅ imagen más grande */
+  width:280px;
   height:360px;
   margin-top:16px;
   object-fit:cover;
