--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ nav span{
 
 .section.hero h1{
   font-size:clamp(80px,7vw,140px);
-  text-align:center;        /* ⬅ centrado */
-  white-space:nowrap;       /* ⬅ una sola línea */
+  text-align:center;
+  white-space:nowrap;
 }
 
 .hero-sub{
@@ -282,7 +282,7 @@ p{
         tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
         Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
         electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
-        del proceso de diseño desde lo conceptual hasta la materialización.
+        del proceso de diseño desde la idea hasta la materialización.
       </p>
       <img src="foto.jpg" alt="Foto personal">
     </div>
