--- a/index.html
+++ b/index.html
@@ -82,18 +82,18 @@ nav span{
 /* ========= HERO ========= */
 .section.hero{
   padding:0;
-  justify-content:flex-start;   /* ⬅ ya no centrado */
+  justify-content:flex-start;
   align-items:center;
 }
 
 .section.hero .section-block{
   position:static;
-  padding-left:22vw;            /* ⬅ alineado con columna editorial */
+  padding-left:22vw;
 }
 
 .section.hero h1{
   font-size:clamp(80px,7vw,140px);
-  text-align:left;              /* ⬅ a la izquierda */
+  text-align:left;
   white-space:nowrap;
 }
 
@@ -283,7 +283,7 @@ p{
         tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
         Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
         electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
-        del proceso de diseño desde la idea hasta la materialización.
+        del proceso de diseño desde el análisis hasta la materialización.
       </p>
       <img src="foto.jpg" alt="Foto personal">
     </div>
