--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@ nav span{
 
 .hero-sub{
   margin-top:24px;
+  width:100%;                 /* ⬅ permite centrado real */
+  text-align:center;          /* ⬅ centrado */
   font-size:13px;
   letter-spacing:.25em;
   color:#777;
-  text-align:left;
 }
 
 /* ========= TYPO ========= */
