--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ nav span{
 
 .hero-sub{
   margin-top:24px;
-  width:100%;                 /* ⬅ permite centrado real */
-  text-align:center;          /* ⬅ centrado */
+  margin-left:32vw;      /* ⬅ MUCHO más a la derecha */
+  text-align:left;
   font-size:13px;
   letter-spacing:.25em;
   color:#777;
