--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ nav span{
 
 .hero-sub{
   margin-top:24px;
-  width:100%;                 /* ⬅ permite centrado real */
-  text-align:center;          /* ⬅ centrado */
+  width:100%;
+  text-align:center;
   font-size:13px;
   letter-spacing:.25em;
   color:#777;
@@ -131,8 +131,8 @@ p{
 }
 
 .about img{
-  width:280px;
-  height:360px;
+  width:300px;          /* ⬅ imagen más grande */
+  height:390px;
   margin-top:16px;
   object-fit:cover;
   filter:grayscale(100%) contrast(1.05);
