--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ nav span{
   scroll-snap-align:start;
   display:flex;
   justify-content:flex-start;
-  padding:180px 10vw 160px 22vw;
+  padding:180px 10vw 160px 24vw;   /* ⬅ margen izquierdo aumentado */
 }
 
 /* ========= SECTION BLOCK ========= */
@@ -88,7 +88,7 @@ nav span{
 
 .section.hero .section-block{
   position:static;
-  padding-left:22vw;
+  padding-left:24vw;             /* ⬅ sincronizado con columnas */
 }
 
 .section.hero h1{
@@ -115,7 +115,7 @@ h1{
 
 p{
   margin-top:8px;
-  margin-left:-16px;     /* ⬅ textos un poco más a la izquierda */
+  margin-left:-16px;
   font-size:15px;
   color:#aaa;
   max-width:520px;
@@ -205,7 +205,7 @@ p{
 
 /* ========= CONTACT ========= */
 .section.contact{
-  padding:180px 10vw 0 22vw;
+  padding:180px 10vw 0 24vw;     /* ⬅ margen izquierdo aumentado */
   display:flex;
   flex-direction:column;
 }
@@ -225,7 +225,7 @@ p{
   display:flex;
   align-items:flex-end;
   justify-content:flex-start;
-  padding:0 0 20px 22vw;
+  padding:0 0 20px 24vw;        /* ⬅ alineado */
 }
 
 .footer{
