--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@ h1{
   line-height:1.05;
 }
 
-/* ⬅ desplazamiento editorial del texto */
+/* ⬅ ajuste más sutil del desplazamiento */
 .section-block p{
   margin-top:8px;
-  padding-left:24px;          /* ⬅ texto más a la izquierda */
+  padding-left:16px;       /* ⬅ menos desplazamiento */
   font-size:15px;
   color:#aaa;
   max-width:520px;
