--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@ h1{
   line-height:1.05;
 }
 
-/* ⬅ ajuste más sutil del desplazamiento */
+/* ⬅ desplazamiento editorial mínimo */
 .section-block p{
   margin-top:8px;
-  padding-left:16px;       /* ⬅ menos desplazamiento */
+  padding-left:12px;       /* ⬅ ajuste final */
   font-size:15px;
   color:#aaa;
   max-width:520px;
