--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ h1{
 /* ⬅ desplazamiento editorial mínimo */
 .section-block p{
   margin-top:8px;
-  padding-left:12px;       /* ⬅ ajuste final */
+  padding-left:8px;        /* ⬅ ajuste ultra sutil */
   font-size:15px;
   color:#aaa;
   max-width:520px;
