--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@ h1{
   line-height:1.05;
 }
 
-/* ⬅ párrafos un poco más anchos */
+/* ⬅ párrafos más anchos */
 .section-block p{
   margin-top:8px;
   padding-left:8px;
   font-size:15px;
   color:#aaa;
-  max-width:560px;      /* ⬅ ancho aumentado */
+  max-width:600px;      /* ⬅ ancho aumentado */
   line-height:1.6;
   text-align:justify;
 }
@@ -216,7 +216,7 @@ h1{
 }
 
 .contact-statement{
-  max-width:560px;
+  max-width:600px;
   margin-top:16px;
 }
 
