--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@ h1{
   line-height:1.05;
 }
 
-/* ⬅ párrafos más anchos */
+/* ========= TEXT ========= */
 .section-block p{
   margin-top:8px;
   padding-left:8px;
   font-size:15px;
   color:#aaa;
-  max-width:600px;      /* ⬅ ancho aumentado */
+  max-width:600px;
   line-height:1.6;
   text-align:justify;
 }
@@ -260,7 +260,7 @@ h1{
 <!-- HERO -->
 <section class="section hero">
   <div class="section-block">
-    <h1>Industrial Design</h1>
+    <h1>Luis Blasco-Ibáñez Berbel</h1>
     <div class="hero-sub">Structure · Process · Clarity</div>
   </div>
 </section>
