--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ h1{
   line-height:1.05;
 }
 
-/* ========= TEXT ========= */
+/* ========= TEXTOS GENERALES ========= */
 .section-block p{
   margin-top:8px;
   padding-left:8px;
@@ -130,6 +130,11 @@ h1{
   gap:56px;
   margin-top:12px;
   align-items:flex-start;
+}
+
+/* ⬅ texto de Sobre mí más ancho */
+.about p{
+  max-width:680px;
 }
 
 .about img{
