--- a/index.html
+++ b/index.html
@@ -91,12 +91,14 @@ nav span{
   padding-left:22vw;
 }
 
+/* hero title multiline */
 .section.hero h1{
   font-size:clamp(80px,7vw,140px);
   text-align:left;
-  white-space:nowrap;
+  line-height:1.05;
 }
 
+/* ========= HERO SUB ========= */
 .hero-sub{
   margin-top:24px;
   width:100%;
@@ -113,7 +115,7 @@ h1{
   line-height:1.05;
 }
 
-/* ========= TEXTOS GENERALES ========= */
+/* ========= TEXTOS ========= */
 .section-block p{
   margin-top:8px;
   padding-left:8px;
@@ -132,7 +134,6 @@ h1{
   align-items:flex-start;
 }
 
-/* ⬅ texto de Sobre mí más ancho */
 .about p{
   max-width:680px;
 }
@@ -265,7 +266,11 @@ h1{
 <!-- HERO -->
 <section class="section hero">
   <div class="section-block">
-    <h1>Luis Blasco-Ibáñez Berbel</h1>
+    <h1>
+      Luis<br>
+      Blasco-Ibáñez<br>
+      Berbel
+    </h1>
     <div class="hero-sub">Structure · Process · Clarity</div>
   </div>
 </section>
