--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@ nav span{
   text-align:left;
 }
 
-/* fuerza que Blasco-Ibáñez no se rompa */
 .hero-surname{
   white-space:nowrap;
 }
@@ -205,6 +204,27 @@ h1{
       Berbel
     </h1>
     <div class="hero-sub">Structure · Process · Clarity</div>
+  </div>
+</section>
+
+<!-- SOBRE MI -->
+<section class="section">
+  <div class="section-block">
+    <h1>Sobre mí</h1>
+    <div class="about">
+      <p>
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
+        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
+        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
+        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
+        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia,
+        tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
+        Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
+        electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
+        de todo el proceso de diseño desde el análisis de la idea hasta la materialización.
+      </p>
+      <img src="foto.jpg" alt="Foto personal">
+    </div>
   </div>
 </section>
 
