--- a/index.html
+++ b/index.html
@@ -23,19 +23,7 @@ body{
   color:#f5f5f5;
   overflow-y:scroll;
   scroll-snap-type:y mandatory;
-  cursor:none;
-}
-
-/* ========= CURSOR ========= */
-.cursor{
-  position:fixed;
-  width:8px;
-  height:8px;
-  border:1px solid #fff;
-  border-radius:50%;
-  pointer-events:none;
-  transform:translate(-50%,-50%);
-  z-index:1000;
+  /* cursor restaurado */
 }
 
 /* ========= NAV ========= */
@@ -79,7 +67,7 @@ nav span{
   max-width:900px;
 }
 
-/* ========= HERO (INICIO) ========= */
+/* ========= HERO ========= */
 .section.hero{
   padding:0;
   justify-content:flex-start;
@@ -101,7 +89,6 @@ nav span{
   white-space:nowrap;
 }
 
-/* ========= HERO SUB ========= */
 .hero-sub{
   margin-top:24px;
   width:100%;
@@ -118,7 +105,6 @@ h1{
   line-height:1.05;
 }
 
-/* ========= TEXTOS ========= */
 .section-block p{
   margin-top:8px;
   padding-left:8px;
@@ -185,8 +171,6 @@ h1{
 </head>
 <body>
 
-<div class="cursor"></div>
-
 <nav>
   <span data-i="0">Inicio</span>
   <span data-i="1">Sobre mí</span>
@@ -227,6 +211,16 @@ h1{
     </div>
   </div>
 </section>
+
+<script>
+/* NAV SCROLL */
+document.querySelectorAll("nav span").forEach((btn,i)=>{
+  btn.addEventListener("click",()=>{
+    document.querySelectorAll(".section")[i]
+      .scrollIntoView({behavior:"smooth"});
+  });
+});
+</script>
 
 </body>
 </html>
