--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ h1{
 }
 
 .about img{
-  width:340px;        /* ⬅ imagen escalada */
+  width:340px;
   height:440px;
   margin-top:16px;
   object-fit:cover;
@@ -204,7 +204,7 @@ h1{
         tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
         Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
         electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
-        de todo el proceso de diseño desde la fase de análisis de la idea hasta la materialización.
+        de todo el proceso de diseño desde la fase de análisis del concepto hasta la materialización.
       </p>
       <img src="foto.jpg" alt="Foto personal">
     </div>
