--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ nav span{
 .section-block{
   position:sticky;
   top:260px;
-  max-width:1100px; /* ⬅ permite texto más ancho */
+  max-width:1100px;
 }
 
 /* ========= HERO ========= */
@@ -121,9 +121,9 @@ h1{
   margin-top:12px;
 }
 
-/* ⬅ texto más ancho */
+/* ⬅ texto ligeramente menos ancho */
 .about p{
-  max-width:740px;
+  max-width:700px;
 }
 
 /* ⬅ imagen desplazada a la derecha */
