--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@ h1{
   margin-top:12px;
 }
 
-/* ⬅ texto ligeramente menos ancho */
+/* texto */
 .about p{
   max-width:700px;
 }
 
-/* ⬅ imagen desplazada a la derecha */
+/* imagen reducida */
 .about img{
-  width:340px;
-  height:440px;
+  width:320px;
+  height:420px;
   margin-top:16px;
   margin-left:40px;
   object-fit:cover;
@@ -206,7 +206,7 @@ h1{
         tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
         Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
         electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
-        de todo el proceso de diseño desde la fase de análisis del concepto hasta la materialización.
+        de todo el proceso de diseño desde la fase de análisis hasta la materialización.
       </p>
       <img src="foto.jpg" alt="Foto personal">
     </div>
