--- a/index.html
+++ b/index.html
@@ -125,9 +125,10 @@ h1{
   max-width:700px;
 }
 
+/* imagen ligeramente más pequeña */
 .about img{
-  width:320px;
-  height:420px;
+  width:300px;
+  height:400px;
   margin-top:16px;
   margin-left:40px;
   object-fit:cover;
