--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@ nav span{
   white-space:nowrap;
 }
 
-/* HERO SUB — alineado a la izquierda */
+/* HERO SUB — ligeramente desplazado */
 .hero-sub{
   margin-top:24px;
-  text-align:left;      /* ⬅ cambio clave */
+  padding-left:8px;      /* ⬅ desplazamiento sutil */
+  text-align:left;
   font-size:13px;
   letter-spacing:.25em;
   color:#777;
