--- a/index.html
+++ b/index.html
@@ -76,16 +76,17 @@ nav span{
   font-size:clamp(80px,7vw,140px);
   line-height:1.05;
   text-align:left;
+  margin-left:-6px;   /* ⬅ desplazamiento mínimo a la izquierda */
 }
 
 .hero-surname{
   white-space:nowrap;
 }
 
-/* HERO SUB — ligeramente desplazado */
+/* HERO SUB */
 .hero-sub{
   margin-top:24px;
-  padding-left:8px;      /* ⬅ desplazamiento sutil */
+  padding-left:8px;
   text-align:left;
   font-size:13px;
   letter-spacing:.25em;
