--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ nav span{
   font-size:clamp(80px,7vw,140px);
   line-height:1.05;
   text-align:left;
-  margin-left:-6px;   /* ⬅ desplazamiento mínimo a la izquierda */
+  margin-left:-4px;   /* ⬅ ajuste final */
 }
 
 .hero-surname{
