--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ nav span{
   font-size:clamp(80px,7vw,140px);
   line-height:1.05;
   text-align:left;
-  margin-left:-4px;   /* ⬅ ajuste final */
+  margin-left:-4px;
 }
 
 .hero-surname{
@@ -183,7 +183,7 @@ h1{
       <span class="hero-surname">Blasco-Ibáñez</span><br>
       Berbel
     </h1>
-    <div class="hero-sub">Structure · Process · Clarity</div>
+    <div class="hero-sub">Portfolio | Diseño industrial</div>
   </div>
 </section>
 
