--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ nav span{
   margin-top:24px;
   padding-left:8px;
   text-align:left;
-  font-size:13px;
+  font-size:14px;          /* ⬅ un poco más grande */
   letter-spacing:.25em;
   color:#777;
 }
